<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.cric_hammel</groupId>
	<artifactId>eternity</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Eternity</name>
	<description>The Infinity Stones in Minecraft</description>
	
	<properties>
    	<java.version>25</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    
	<repositories>
		<repository>
			<id>papermc</id>
			<url>https://repo.papermc.io/repository/maven-public/</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
    		<groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>[26.1.2.build,)</version>
            <scope>provided</scope>
        </dependency>
		
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.14.0</version>
		</dependency>
	</dependencies>
	
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.0</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>